--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.6.1",
-    "template-fullstack": "file:.."
+    "react-tsparticles": "^2.7.1",
+    "template-fullstack": "file:..",
+    "tsparticles": "^2.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
